--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,5 +2,6 @@ version: '3.8'
 services:
   kais_al_husrom_web_page:
     container_name: kais_al_husrom_web_page_container
+    image: kaisalhusrom/kais_al_husrom_web_page
     ports:
       - "80:80"
